--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
  	<title>Hello Cousera!</title>
  </head>
  <body>
- <h1>Hello Cousera!>
+ <h1>Hello Cousera! its gonna be a great course><h1>
  </body>
  </html>
